Volume-Mount/Volume-Local/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins-demo
spec:
  selector:
    app: jenkinscont
  ports:
    - name: webport
      protocol: TCP
      port: 8080
      targetPort: 8080
