Volume-Mount/Volume-Local/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
  name: jenkins-ingress
  namespace: jenkins-demo
spec: 
  tls:
  - hosts:
    - jenkins.snicloud.xyz
    secretName: jenkins-web-cert
  rules: 
    - host: jenkins.snicloud.xyz
      http: 
        paths: 
          - backend: 
              service:
                name: jenkins-service
                port: 
                  number: 8080
            path: /
            pathType: Prefix
